--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,7 +1,5 @@
 // colors
 
-// colors
-
 //$off-orange: #ff6c2f;
 //$off-black: black;
 //$off-blue: #272c7e;
@@ -14,3 +12,14 @@ $l-size: 3.2rem;
 $xl-size: 4.8rem;
 
 $desktop-breakpoint: 56.7rem;
+
+// font size
+$font-size-large: 2.4rem;
+$font-size-small: 1.8rem;
+
+// colors
+$dark-grey: #444;
+$blue: #1c88bf;
+$dark-blue: #364051;
+$off-white: #f7f7f7;
+$grey: #666;
